# brms

./: .gitignore  Makefile  app.py  manage.py  pyproject.toml  setup.cfg  setup.py
brms/: settings.py  urls.py  wsgi.py
config/: config.bkp.py  config.prod.py
logs/: system.log.2023-05-07
src/: __init__.py
src/commons/: constants.py  database.py  entity.py  factories.py  forms_serializer.py  models.py  scripts.py  serializer.py
src/routes/: group.py
src/services/: __init__.py  forms.py  group.py
static/css/: style.css
static/js/: forms.js
templates/: layout.html
templates/forms/default/: button.xsl  checkbox.xsl  date_textbox.xsl  large_textbox.xsl  multi_ordered_select.xsl  multi_select.xsl  numeric_textbox.xsl  radio_button.xsl  radiobutton.xsl  simple_textbox.xsl  single_select.xsl
templates/group/: create.html  index.html  info.html  nav.html
tests/: conftest.py
tests/commons/: test_forms_serializer.py  test_serializer.py
xslt/default/: checkbox.xsl  date_textbox.xsl  large_textbox.xsl  numeric_textbox.xsl  simple_textbox.xsl
